Fix the selector for dark scrollbars on win and linux

--- a/src/styles/brackets_theme_default.less
+++ b/src/styles/brackets_theme_default.less
@@ -176,7 +176,7 @@
     }
     
     /* Custom scrollbar colors */
-    .platform-win {
+    &.platform-win {
         .CodeMirror-gutter-filler {
             background-color: rgb(15, 15, 15);
         }
@@ -198,7 +198,7 @@
         }
     }
 
-    .platform-linux {
+    &.platform-linux {
         ::-webkit-scrollbar-thumb {
             box-shadow: 0 0 0 4px rgba(255, 255, 255, 0.24) inset;
         }
